[gd_scene load_steps=11 format=3 uid="uid://bkdpjwrx6uwp8"]

[ext_resource type="Script" path="res://main.gd" id="1_kntlj"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1gucv"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_2isqp"]
sky_material = SubResource("ProceduralSkyMaterial_1gucv")

[sub_resource type="Environment" id="Environment_odku5"]
background_mode = 2
sky = SubResource("Sky_2isqp")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qj6oe"]
vertex_color_use_as_albedo = true
vertex_color_is_srgb = true
albedo_color = Color(0.472926, 0.243713, 0.403054, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_4pi5j"]
material = SubResource("StandardMaterial3D_qj6oe")
size = Vector2(25, 25)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_6bk1b"]
radius = 0.02
height = 0.5

[sub_resource type="SphereMesh" id="SphereMesh_ck7l4"]
radius = 0.05
height = 0.1

[sub_resource type="CapsuleMesh" id="CapsuleMesh_bbf73"]
radius = 0.02
height = 0.5

[sub_resource type="SphereMesh" id="SphereMesh_f4v26"]
radius = 0.05
height = 0.1

[node name="RootNode" type="Node3D"]
script = ExtResource("1_kntlj")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.999007, -0.044561, 0, 0.044561, 0.999007, 0, -0.117548, 2.35236)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_odku5")

[node name="TOP" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.999567, -0.0294394, 0, 0.0294394, -0.999567, 0, 0.879857, -0.624146)
mesh = SubResource("PlaneMesh_4pi5j")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.997422, -0.0717586, 0, 0.0717586, 0.997422, 0.26362, 0.394249, 4.5445)

[node name="Pivot1" type="SpringArm3D" parent="."]

[node name="Arm1" type="MeshInstance3D" parent="Pivot1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5209, 0)
mesh = SubResource("CapsuleMesh_6bk1b")

[node name="Bob1" type="MeshInstance3D" parent="Pivot1/Arm1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.260134, 0)
mesh = SubResource("SphereMesh_ck7l4")
skeleton = NodePath("../..")

[node name="Pivot2" type="Node3D" parent="Pivot1/Arm1"]

[node name="Arm2" type="MeshInstance3D" parent="Pivot1/Arm1/Pivot2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.272524, 0)
mesh = SubResource("CapsuleMesh_bbf73")

[node name="Bob2" type="MeshInstance3D" parent="Pivot1/Arm1/Pivot2/Arm2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.255005, 0)
mesh = SubResource("SphereMesh_f4v26")
